--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startseite</title>
+    <link rel="stylesheet" href="static/styles/homepage-stylesheet.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="container">
+        <h1>Rezept & Einkaufsliste</h1>
+        <button class="btn" onclick="openRecipePage()">Rezepte anzeigen</button>
+        <button class="btn" onclick="openInventoryPage()">Vorratsschrank anzeigen</button>
+        <button class="btn" onclick="openShoppingListPage()">Einkaufsliste anzeigen</button>
+    </div>
+    <script src="static/scripts/homepage_script.js"></script>
 </body>
 </html>
